k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: air-quality-monitor-service
  namespace: air-quality-monitor
  labels:
    app: air-quality-monitor
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: air-quality-monitor
